apps/tooltracker/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tooltracker
  namespace: tooltracker
  labels:
    app: tooltracker
spec:
  type: ClusterIP
  selector:
    app: tooltracker
    app.kubernetes.io/name: tooltracker
  ports:
    - name: http
      port: 5000
      targetPort: http
      protocol: TCP
